<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.institutionmanage.sailfish.Shopmember.Profile.HelpActivity">

    <include
        android:id="@+id/tb_activity_help"
        layout="@layout/tile_toolbar" />

    <ScrollView
        android:id="@+id/sv_activity_help"
        android:layout_below="@id/tb_activity_help"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/h1"
                android:text="@string/text_h_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_intro_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/h1"
                android:text="@string/text_h_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_note_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/h1"
                android:text="@string/text_h_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/p"
                android:text="@string/text_p_contact_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
